<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Skotersverige</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skotersverige">Skotersverige</string>
    <string name="mapbox_access_token" translatable="false" tools:ignore="UnusedResources">sk.eyJ1Ijoic3lzdGFpbmFkZXYiLCJhIjoiY2x6ZjUzZW41MTBiZjJpcXplYWR6b3hvMyJ9.NK5-whs-iNzysW9WktKRJg</string>
    <string name="facebook_app_id" translatable="false">469138440399694</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb469138440399694</string>
    <string name="txt_no_record_found">No Record Found</string>
    <string name="txt_no_recent_feed">No recent feed available</string>
    <string name="no_events_found_for_today">No active events registered</string>
    <string name="txt_add_ticket_here">Add Tickets Here</string>
    <string name="choose_preferred_language">Please choose preferred language</string>
    <string name="sw">Swedish</string>
    <string name="lbl_skip">SKIP</string>
    <string name="lbl_done">DONE</string>
    <string name="time">Time</string>
    <string name="distance">Distance</string>
    <string name="feed_duration">Duration</string>
    <string name="calories">Calories</string>
    <string name="speed">Speed</string>
    <string name="avg_pace">Avg. Pace:</string>
    <string name="app_settings">App Setting</string>
    <string name="app_profile_settings">Profile Setting</string>
    <string name="app_upload_profile_settings">Upload profile picture</string>
    <string name="app_choose_profile_picture_settings">Choose profile picture</string>
    <string name="app_set_first_and_last_name_settings">Set your first name and last name</string>
    <string name="app_additional_data_settings">ADDITIONAL DATA</string>
    <string name="app_log_settings">Log</string>
    <string name="app_age_settings">Age</string>
    <string name="app_Weight_settings">Weight</string>
    <string name="app_Gender_settings">Gender</string>
    <string name="app_change_password_settings">Change password</string>
    <string name="app_change_password_settings_title">CHANGE PASSWORD</string>
    <string name="app_privacy_policy_settings">Privacy Policy</string>
    <string name="app_clear_cache">Clear Cache</string>
    <string name="app_clear_cache_settings">After clearing cache data will be retrieved again.</string>
    <string name="app_app_version_settings">App version: </string>
    <string name="confirm_logout">Confirm Logout</string>
    <string name="Logout_from_skotersverige">Logout from Skotersverige</string>
    <string name="logged_out_successfully">Logged out successfully</string>
    <string name="t_1">Begin Your\n Journey With Us</string>
    <string name="t_2">Explore the nature, meet new people,\n healthy and fun activities and many more…</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="txt_Already_have_an_account">Already have an account yet? Log In</string>
    <string name="menu">Menu</string>
    <string name="t_d_setting">Setting</string>
    <string name="t_d_help">Help</string>
    <string name="t_logout">Logout</string>
    <string name="t_logged_out">Logged out successfully</string>
    <string name="upload_successful">Upload successful</string>
    <string name="title_fragment_dashboard">Dashboard</string>
    <string name="title_fragment_browse_club">Browse Clubs</string>
    <string name="title_fragment_twitter">Twitter</string>
    <string name="title_fragment_feed">Feed</string>
    <string name="title_fragment_Map">Map</string>
    <string name="title_fragment_Trails_status">Trails Status</string>
    <string name="title_fragment_order">Order</string>
    <string name="title_fragment_purchase_options">Purchase Options</string>
    <string name="title_search_for_a_membership">Search for a membership</string>
    <string name="t_PRO">PRO</string>
    <string name="t_BASIC">BASIC</string>
    <string name="t_UPGRADE">Upgrade</string>
    <string name="t_number_of_logs">Number of logs</string>
    <string name="t_total_distance">Total Distance</string>
    <string name="t_total_time">Total time</string>
    <string name="t_previous_distance">Previous distance</string>
    <string name="t_purchase_history">Purchase history</string>
    <string name="t_memberships">Memberships</string>
    <string name="t_recent_feed">Recent Feed</string>
    <string name="t_ride_logs">Ride Logs</string>
    <string name="t_purchase_Order_details">Order Details</string>
    <string name="tab_Orders_History">Orders</string>
    <string name="tab_Pro_Trails_History">Pro Trails</string>
    <string name="tab_Order_Created">Created:</string>
    <string name="tab_Status">Status:</string>
    <string name="tab_Valid_to">Valid to:</string>
    <string name="tab_Total_Price">Total Price:</string>
    <string name="tab_Number_of_Tickets">Number of Tickets:</string>
    <string name="pro_trails_uppercase">PRO Trails</string>
    <string name="txt_Buy_single_ticket">Buy single ticket</string>
    <string name="txt_Buy_multiple_tickets">Buy multiple tickets</string>
    <string name="txt_Upgrade_to_pro_trails">Upgrade to PRO Trails</string>
    <string name="t_All">All</string>
    <string name="t_Favourites">Favourites</string>
    <string name="t_search_club">Search for a club</string>
    <string name="t_search_trail">Search for a trail</string>
    <string name="t_search_event">Search for a events</string>
    <string name="label_active_memberships">Active</string>
    <string name="label_expired_memberships">Expired</string>
    <string name="t_Valid_to">Valid to</string>
    <string name="t_Valid_from">Valid from</string>
    <string name="logout_from_track4">Logout from Skotersverige?</string>
    <string name="ok">Ok</string>
    <string name="t_length_of_all_trails">Length of all trails</string>
    <string name="t_club_action">Action</string>
    <string name="t_club_gallery">Gallery</string>
    <string name="t_club_about">About</string>
    <string name="t_club_sub_members">Submembers</string>
    <string name="t_become_a_member">Become a member</string>
    <string name="t_trails">Trails</string>
    <string name="t_length">Length</string>
    <string name="t_tile_view">Tile View</string>
    <string name="t_list_view">List View</string>
    <string name="t_open">Open</string>
    <string name="t_opened">Opened</string>
    <string name="t_close">Close</string>
    <string name="t_total_length">Total Length:</string>
    <string name="t_last_prepared">Last Prepared</string>
    <string name="t_last_Status_prepared">Last Prepared:</string>
    <string name="t_trails_statuss">Status:</string>
    <string name="t_status">Status</string>
    <string name="t_km">Km</string>
    <string name="total_quality">Total Quality:</string>
    <string name="min_height">Min Height:</string>
    <string name="max_height">Max Height:</string>
    <string name="duration">Duration:</string>
    <string name="difficulty">Difficulty:</string>
    <string name="lights">Lighting:</string>
    <string name="trail_short_message">Trail Short Message:</string>
    <string name="average_rating">Average Rating:</string>
    <string name="description">Description:</string>
    <string name="term">*If you need an SMS ticket enter your mobile number (3 kr per SMS)</string>
    <string name="ticket_created_successfully">Ticket created successfully!</string>
    <string name="t_go_explore">Go Explore</string>
    <string name="t_trails_status">Trails Status</string>
    <string name="t_event">Event</string>
    <string name="t_shops">Shops</string>
    <string name="t_links_and_doc">Links and Documents</string>
    <string name="t_social_media">Social Media</string>
    <string name="t_feedback">FeedBack</string>
    <string name="t_events">Events</string>
    <string name="t_links">Links</string>
    <string name="title_register_sign_up">Sign Up</string>
    <string name="title_login_Log_in">Log In</string>
    <string name="t_social_with_Facebook">Log In with Facebook</string>
    <string name="t_social_with_Google">Log In with Google</string>
    <string name="t_login_email">EMAIL</string>
    <string name="t_login_password">PASSWORD</string>
    <string name="t_login_enter_your_name">Enter your name</string>
    <string name="t_login_enter_your_password">Enter your password</string>
    <string name="t_login_forgot_password">Forgot password</string>
    <string name="t_btn_Log_in">Log In</string>
    <string name="t_dont_have_an_account">Don’t have an account yet? Sign Up</string>
    <string name="t_R_sign_up">Sign Up</string>
    <string name="t_R_dont_have_an_account_yet">Already have an account yet? Log In</string>
    <string name="t_h_enter_your_name">Enter your name</string>
    <string name="t_h_enter_your_email">Enter your email</string>
    <string name="t_h_enter_your_password">Enter your password</string>
    <string name="t_h_enter_your_re_new_password">Repeat your new password</string>
    <string name="password_must_be_8_chars">Password must be at least 8 characters</string>
    <string name="t_h_enter_your_re_password">Repeat your password</string>
    <string name="t_h_passwords_do_not_match">Passwords do not match.</string>
    <string name="t_h_enter_your_new_password">Enter your new password</string>
    <string name="t_recover_password">Recover\npassword</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="name">NAME</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="repeat_password">REPEAT PASSWORD</string>
    <string name="feed">Feed</string>
    <string name="txt_error_message">%1$S*</string>
    <string name="txt_label">Label</string>
    <string name="t_to_memberships">Memberships</string>
    <string name="t_buy_memberships">Buy Memberships</string>
    <string name="t_my_memberships">My Memberships</string>
    <string name="new_tickets">New Ticket</string>
    <string name="get_ticket">Get Ticket</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="Save">Save</string>
    <string name="remember_me">Remember me</string>
    <string name="please_enter_email_id">Please enter email Id</string>
    <string name="please_enter_valid_email_id">Please enter valid email Id</string>
    <string name="please_select_your_date">Please select your date</string>
    <string name="please_select_your_first_name">Please enter your first name</string>
    <string name="please_select_your_last_name">Please enter your last name</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="description_t1">DESCRIPTION</string>
    <string name="make_it_public">Make it public</string>
    <string name="make_it_private">Make it private</string>
    <string name="feedback_saved_successfully">Feedback saved successfully</string>
    <string name="event_location">Location:</string>
    <string name="event_resort_name">Resort name:</string>
    <string name="trail_used_for_event">Trails used for event:</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="mem_email">EMAIL</string>
    <string name="t_h_enter_your_f_name">Enter your first name</string>
    <string name="t_h_enter_your_l_name">Enter your last name</string>
    <string name="t_h_enter_your_e_Mail">Enter your email</string>
    <string name="t_btn_pay_with_swish">Pay with Swish</string>
    <string name="t_btn_pay_with_credit_card">Pay with credit card</string>
    <string name="ice_on_trail">Ice on trail!</string>
    <string name="remove_feedback">Remove feedback</string>
    <string name="approve_feedback">Approve feedback</string>
</resources>