<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/main_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkblue">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp"
            app:popupTheme="@style/AppTheme.PopupOverlay">


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <!-- Hamburger Icon -->
                <androidx.appcompat.widget.AppCompatImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/white_back_btn" />

                <TextView
                    android:id="@+id/btnHamburger"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/t_become_a_member"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />


            </RelativeLayout>


        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="14dp"
        android:text="Supporting member 2024"
        android:textAllCaps="false"
        android:textColor="@color/active_txt"
        android:textSize="22sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/main_appbar"
        android:orientation="vertical"
        android:padding="@dimen/marginLarge">

        <TextView
            android:id="@+id/txt_member_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text=""
            android:textColor="@color/active_txt"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/first_name"
                android:layout_marginStart="@dimen/_12sdp"
                android:textColor="@color/grey_light11"
                android:textSize="12sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@drawable/rounded_edittext_white_background"
                android:backgroundTint="@color/edit_gray"
                android:hint="@string/t_h_enter_your_f_name"
                android:inputType="text"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="@dimen/_11sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/last_name"
                android:layout_marginStart="@dimen/_12sdp"
                android:textColor="@color/grey_light11"
                android:textSize="12sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@drawable/rounded_edittext_white_background"
                android:backgroundTint="@color/edit_gray"
                android:hint="@string/t_h_enter_your_l_name"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="@dimen/_11sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/mem_email"
                android:layout_marginStart="@dimen/_12sdp"
                android:textColor="@color/grey_light11"
                android:textSize="12sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@drawable/rounded_edittext_white_background"
                android:backgroundTint="@color/edit_gray"
                android:hint="@string/t_h_enter_your_e_Mail"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="@dimen/_11sdp" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_24sdp"
        android:layout_margin="@dimen/_8sdp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/btn_pay_with_swish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_bg_color"
            android:backgroundTint="@color/blue"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:elevation="0dp"
            android:paddingVertical="@dimen/_2sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/swish_logo" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:padding="4dp"
                android:text="@string/t_btn_pay_with_swish"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_pay_with_credit_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/blue_bg_color"
            android:backgroundTint="@color/blue"
            android:gravity="center_horizontal"
            android:elevation="0dp"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/_2sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/debit_card" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:padding="4dp"
                android:text="@string/t_btn_pay_with_credit_card"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>