<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@drawable/home_bg">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="55dp"
            android:layout_gravity="center"
            android:src="@drawable/home_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/t_recover_password"
            android:textSize="34sp"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/email"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:visibility="visible" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textSize="16sp"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:background="@drawable/rounded_edittext_white_background" />

        <TextView
            android:id="@+id/emailErrorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="Please enter your email"
            android:layout_marginLeft="10dp"
            android:textColor="@color/error_color"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/sendButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/send"
                android:background="@drawable/white_outline_button"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:padding="1dp"
                android:paddingTop="1dp"
                android:paddingBottom="1dp"
                android:theme="@style/YourButtonTheme"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/cancelText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/cancel"
                android:background="@drawable/white_outline_button"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:padding="1dp"
                android:paddingTop="1dp"
                android:paddingBottom="1dp"
                android:theme="@style/YourButtonTheme"
                android:gravity="center" />
        </LinearLayout>
    </LinearLayout>


</ScrollView>